--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -22,7 +22,9 @@ jobs:
     - run: npm i
       env:
         NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    - run: tsc
+    - run: |
+        npm i -g typescript
+        tsc
     - name: Docker login
       uses: docker/login-action@v3
       with:
