--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "build/api.js",
+  "type": "module",
   "scripts": {
     "start": "tsc && node build/api.js"
   },
@@ -11,9 +12,10 @@
     "url": "git+https://github.com/open-game-server-host/api.git"
   },
   "dependencies": {
-    "@open-game-server-host/backend-lib": "^1.0.42",
+    "@open-game-server-host/backend-lib": "^1.0.57",
     "express": "^5.2.1",
     "express-validator": "^7.3.1",
+    "jose": "^6.1.3",
     "pg": "^8.18.0"
   },
   "devDependencies": {
