--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "url": "git+https://github.com/open-game-server-host/api.git"
   },
   "dependencies": {
-    "@open-game-server-host/backend-lib": "^1.0.57",
+    "@open-game-server-host/backend-lib": "^1.0.62",
+    "@types/ws": "^8.18.1",
     "express": "^5.2.1",
     "express-validator": "^7.3.1",
     "jose": "^6.1.3",
-    "pg": "^8.18.0"
+    "pg": "^8.18.0",
+    "ws": "^8.19.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.6",
