--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
   },
   "dependencies": {
     "@open-game-server-host/backend-lib": "^1.0.78",
+    "@redis/client": "^5.11.0",
     "@types/ws": "^8.18.1",
     "express": "^5.2.1",
     "express-validator": "^7.3.1",
     "firebase-admin": "^13.6.1",
-    "jose": "^6.1.3",
     "pg": "^8.18.0",
     "ws": "^8.19.0"
   },
